2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* NEWS:
	* configure.in:
	* src/About.cs:

	0.3.0-pre1

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/Makefile.am:
	* data/muine.applications:
	* libmuine/Makefile.am:
	* libmuine/bacon-message-connection.c: (test_is_socket),
	(server_cb), (try_server), (try_client),
	(bacon_message_connection_new), (bacon_message_connection_free),
	(bacon_message_connection_set_callback),
	(bacon_message_connection_send),
	(bacon_message_connection_get_is_server):
	* libmuine/bacon-message-connection.h:
	* src/Makefile.am:
	* src/MessageConnection.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Add command line handling and an applications file so that
	Nautilus knows about us.

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/glade/PlaylistWindow.glade:
	* src/CoverDatabase.cs:
	* src/PlaylistWindow.cs:

	Tried to implement DnD to the cover image, but ran into a Gtk#
	bug. Updated TODO with bug information.

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* libmuine/egg/Makefile.am:
	* libmuine/egg/eggstatusicon.c:
	* libmuine/egg/eggstatusicon.h:
	* src/NotificationAreaIcon.cs:

	Tray icon restores itself after having been destroyed.

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* src/PlaylistWindow.cs:

	Add XF86XK_Audio* keybindings.

2004-01-26  Jorn Baayen  <jorn@nl.linux.org>

	* data/images/Makefile.am:
	* data/images/muine-tray-paused.png:
	* data/images/muine-tray-playing.png:
	* data/images/muine-tray.png:
	* src/Makefile.am:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:

	Show playing status in tray icon, inspired by a patch from
	Sergio Rubio <S0302298@newi.ac.uk>

2004-01-26  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Nicer album tooltip.

2004-01-26  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* libmuine/db.c: (db_open), (db_get_version), (db_set_version),
	(db_foreach), (db_unpack_double), (db_pack_double):
	* libmuine/db.h: