@@ -97,14 +97,6 @@ public class SkipToWindow
 			from_tick = false;
 	}
 
-	/* FIXME this isn't working, but it should. When it works, we don't
-	   need the timeout - just pause when we move the slider and unpause
-	   when done */
-	private void HandleSongSliderButtonReleaseEvent (object o, EventArgs a)
-	{
-		player.Seeking = false;
-	}
-	
 	private void HandleWindowDeleteEvent (object o, EventArgs a)
 	{
 		window.Visible = false;
